[gd_scene load_steps=7 format=3 uid="uid://1p5j3eh7piyk"]

[ext_resource type="Script" uid="uid://dwnxg463uj5tt" path="res://characters/brawler/brawler.gd" id="1_scbb7"]
[ext_resource type="Script" uid="uid://dae5xan60bcom" path="res://characters/brawler/brawler_HitboxCore.gd" id="2_qb25f"]
[ext_resource type="Script" uid="uid://cm7txikk5gmmw" path="res://characters/brawler/brawler_lt_a.gd" id="3_y5dqw"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_qb25f"]
size = Vector2(32, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_y5dqw"]
size = Vector2(24, 16)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_fpobv"]
size = Vector2(48, 48)

[node name="BrawlerChar" type="Node2D"]
script = ExtResource("1_scbb7")
ATK = 1.5
SPEED = 0.5
metadata/_custom_type_script = "uid://blixqvsnb2wjm"

[node name="hitboxes" type="Node2D" parent="."]

[node name="A" type="Area2D" parent="hitboxes"]
collision_layer = 0
collision_mask = 510
script = ExtResource("2_qb25f")
metadata/_custom_type_script = "uid://dqmvlk5p1wmdf"

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitboxes/A"]
position = Vector2(32, 0)
shape = SubResource("RectangleShape2D_qb25f")

[node name="B" type="Area2D" parent="hitboxes"]
collision_layer = 0
collision_mask = 510
script = ExtResource("2_qb25f")
dmg_mult = 0.5
knb_mult = 2.0
metadata/_custom_type_script = "uid://dqmvlk5p1wmdf"

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitboxes/B"]
position = Vector2(32, 0)
shape = SubResource("RectangleShape2D_qb25f")

[node name="RT_A" type="Area2D" parent="hitboxes"]
collision_layer = 0
collision_mask = 510
script = ExtResource("2_qb25f")
metadata/_custom_type_script = "uid://dqmvlk5p1wmdf"

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitboxes/RT_A"]
position = Vector2(28, 0)
shape = SubResource("RectangleShape2D_y5dqw")

[node name="RT_B" type="Area2D" parent="hitboxes"]
collision_layer = 0
collision_mask = 510
script = ExtResource("2_qb25f")
dmg_mult = 0.75
attack_args = Dictionary[int, float]({
0: 0.5
})
metadata/_custom_type_script = "uid://dqmvlk5p1wmdf"

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitboxes/RT_B"]
shape = SubResource("RectangleShape2D_fpobv")

[node name="LT_A" type="Area2D" parent="hitboxes"]
collision_layer = 0
collision_mask = 510
script = ExtResource("3_y5dqw")
metadata/_custom_type_script = "uid://dqmvlk5p1wmdf"

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitboxes/LT_A"]
position = Vector2(28, 0)
shape = SubResource("RectangleShape2D_y5dqw")

[node name="LT_B" type="Area2D" parent="hitboxes"]
collision_layer = 0
collision_mask = 510
script = ExtResource("2_qb25f")
dmg_mult = 0.75
attack_args = Dictionary[int, float]({
0: 0.5
})
metadata/_custom_type_script = "uid://dqmvlk5p1wmdf"

[node name="CollisionShape2D" type="CollisionShape2D" parent="hitboxes/LT_B"]
shape = SubResource("RectangleShape2D_fpobv")
